src/tests/test-src/errors/E29-undeclare-fn.syntran
// E29: undeclare-fn
// A function was called before being defined

let a = 1;

nonexistent_fn();
